# config/packages/nelmio_api_doc.yaml
@@ -12,6 +12,10 @@ nelmio_api_doc:
                     type: http
                     scheme: bearer
                     bearerFormat: JWT
+                ApiKeyAuth:
+                    type: apiKey
+                    in: header
+                    name: X-API-Key
             schemas:
                 general_error:
                     title: "General error"
